--- a/index.css
+++ b/index.css
@@ -1,52 +1,341 @@
 
+/* easteregg and title*/
 
-body {
-	background-color:black;
-	    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
+#easteregg {
+	height:50px;
+	width:50px;
+	color:#fff;
+	float:left;
+	margin-top:50px;
+	margin-left:600px;
 }
 
-#name {
+body {
+
+}
+
+body::-webkit-scrollbar { 
+  /* This is the magic bit */
+  display: none;
+}
+
+#page {
 	text-align:center;
+}
+
+#you_found_the_easter_egg {
 	font-family: 'Quicksand', sans-serif;
 	font-size:600%;
-	margin-top:206px;
-	color:white;
+	margin-top:180px;
     position: relative;
 }
 
-#loader {
-	margin-left:auto;
-	margin-right:auto;
-	margin-top:140px;
-	border: 14px solid #0d0d0d;
-  border-radius: 50%;
-  border-top: 14px solid #ffffff;
-  width: 100px;
-  height: 100px;
-  -webkit-animation: spin 2s linear infinite;
-  animation: spin 2s linear infinite;
+#you_found_the_easter_egg:target {
+    -webkit-animation-name: titleani; /* Safari 4.0 - 8.0 */
+    -webkit-animation-duration: 3s; /* Safari 4.0 - 8.0 */
+    -webkit-animation-iteration-count: infinite; /* Safari 4.0 - 8.0 */
+	-webkit-animation-timing-function: linear; /* Safari 4.0 - 8.0 */
+    animation-name: titleani;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
+	animation-timing-function: linear;
 }
 
-@-webkit-keyframes spin {
-  0% { -webkit-transform: rotate(0deg); }
+@-webkit-keyframes titleani /* Safari and Chrome */ {
+  from {
+    -ms-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -webkit-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  to {
+    -ms-transform: rotate(360deg);
+    -moz-transform: rotate(360deg);
+    -webkit-transform: rotate(360deg);
+    -o-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
   
-  50% { -webkit-transform: rotate(180deg);}
-  
-   100% { -webkit-transform: rotate(1080deg);}	
 }
 
-@keyframes spin {
-  0% { transform: rotate(0deg); }
+@keyframes titleani {
+  from {
+    -ms-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -webkit-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  to {
+    -ms-transform: rotate(360deg);
+    -moz-transform: rotate(360deg);
+    -webkit-transform: rotate(360deg);
+    -o-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
   
-  50% { transform: rotate(180deg);}
+}
+
+/* logo's */
+
+#instalogo {
+	width:50px;
+	height:auto;
+	-webkit-transition: opacity 0.5s; /* For Safari 3.1 to 6.0 */
+    transition: opacity 0.5s;
+}
+#instalogo:hover {
+	opacity: 0.5;
+    filter: alpha(opacity=50);
+}
+#ytlogo {
+	width:auto;
+	height:50px;
+	-webkit-transition: opacity 0.5s; /* For Safari 3.1 to 6.0 */
+    transition: opacity 0.5s;
+}
+#ytlogo:hover {
+	opacity: 0.5;
+    filter: alpha(opacity=50);
+}
+#steamlogo {
+	width:auto;
+	height:58px;
+	-webkit-transition: opacity 0.5s; /* For Safari 3.1 to 6.0 */
+    transition: opacity 0.5s;
+}
+#steamlogo:hover {
+	opacity: 0.5;
+    filter: alpha(opacity=50);
+}
+
+ul {
+	list-style:none;
+    margin:0;
+    padding:0;
+    text-align:center;
+	margin-top:120px;
+}
+ul li {
+    display: inline;
+}
+
+ul a {
+	display:inline-block;
+    padding:40px;
+}
+
+/* footer */
+
+.footer {
+	font-family: 'Quicksand', sans-serif;
+	text-align:center;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding-top:860px;
+  margin-bottom:30px;
   
-   100% { transform: rotate(1080deg);}		  
-		  
+}
+
+/* scroll effect */
+
+#button {
+	margin-top:150px;
+}
+
+#scroll {
+	margin-top:0px;
+}
+
+#projects {
+	font-family: 'Montserrat', sans-serif;
+	color:black;
+	background-color:#f2f2f2;
+	text-decoration:none;
+	padding: 12px 20px 12px 20px;
+	-webkit-transition: box-shadow 0.5s; /* For Safari 3.1 to 6.0 */
+    transition: box-shadow 0.5s, background-color 0.5s ;
+}
+
+#projects:hover {
+	box-shadow: 5px 10px 10px #d9d9d9;
+	background-color:white;
+}
+
+#sites {
+	width:1000px;
+	margin: 450px auto;
+}
+
+#arrow {
+	width:auto;
+	border-radius: 55%;
+	height:45px;
+	float:right;
+	margin-right:-400px;
+	margin-top:770px;
+	-webkit-transition: box-shadow 0.5s; /* For Safari 3.1 to 6.0 */
+    transition: box-shadow 0.5s;
+}
+
+#arrow:hover {
+	box-shadow: 3px 7px 7px #a6a6a6;
+}
+
+#top {
+	color:white;
+}
+
+/* sites */
+
+#sitesmobile {
+	display:none
+}
+
+#left {
+	float:left;
+	width:20px;
+	
+}
+
+#right {
+	float:right;
+	width:400px;
+}
+
+.img {
+	float:right;
+	margin-top:100px;
+	width:400px;
+	height:auto;
+	-webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+    filter: grayscale(100%);
+	-webkit-transition: -webkit-filter 0.5s, box-shadow 0.5s; /* For Safari 3.1 to 6.0 */
+    transition: filter 0.5s,  box-shadow 0.5s;
+}
+
+.img1 {
+	float:left;
+	margin-top:100px;
+	width:400px;
+	height:auto;
+	-webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+    filter: grayscale(100%);
+	-webkit-transition: -webkit-filter 0.5s, box-shadow 0.5s; /* For Safari 3.1 to 6.0 */
+    transition: filter 0.5s,  box-shadow 0.5s;
+}
+
+.img1:hover   {
+   -webkit-filter: grayscale(0%); /* Safari 6.0 - 9.0 */
+    filter: grayscale(0%);  
+	box-shadow: 10px 15px 15px #d9d9d9;
+}
+
+.img:hover   {
+   -webkit-filter: grayscale(0%); /* Safari 6.0 - 9.0 */
+    filter: grayscale(0%); 
+    box-shadow: 10px 15px 15px #d9d9d9;	
+}
+
+#itext {
+	width:200px;
+	float:left;
+	margin-top:20px;
+	margin-left:-55px;
+	font-family: 'Montserrat', sans-serif;
+	color:black;
+	text-decoration:none;
+	
+}
+
+#wgma {
+	width:200px;
+	float:left;
+	margin-top:20px;
+	margin-left:-15px;
+	font-family: 'Montserrat', sans-serif;
+	color:black;
+	text-decoration:none;
+	
+}
+
+
+#snackbar {
+	font-family: 'Montserrat', sans-serif;
+    visibility: hidden;
+    min-width: 250px;
+    margin-left: -125px;
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    border-radius: 2px;
+    padding: 16px;
+    position: fixed;
+    z-index: 1;
+    left: 50%;
+    bottom: 30px;
+    font-size: 17px;
+}
+
+#snackbar.show {
+    visibility: visible;
+    -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
+    animation: fadein 0.5s, fadeout 0.5s 2.5s;
+}
+
+@-webkit-keyframes fadein {
+    from {bottom: 0; opacity: 0;} 
+    to {bottom: 30px; opacity: 1;}
+}
+
+@keyframes fadein {
+    from {bottom: 0; opacity: 0;}
+    to {bottom: 30px; opacity: 1;}
+}
+
+@-webkit-keyframes fadeout {
+    from {bottom: 30px; opacity: 1;} 
+    to {bottom: 0; opacity: 0;}
+}
+
+@keyframes fadeout {
+    from {bottom: 30px; opacity: 1;}
+    to {bottom: 0; opacity: 0;}
+}
+
+
+/* select color */
+
+
+/*** Works on common browsers ***/
+::selection {
+    background-color:black;
+    color: #fff;
+}
+
+/*** Mozilla based browsers ***/
+::-moz-selection {
+    background-color:black;
+    color: #fff;
+}
+
+/***For Other Browsers ***/
+::-o-selection {
+    background-color:black;
+    color: #fff;
+}
+
+::-ms-selection {
+    background-color:black;
+    color: #fff;
+}
+
+/*** For Webkit ***/
+::-webkit-selection {
+    background-color:black;
+    color: #fff;
 }
 
 @media screen and (max-width: 1370px) {
@@ -57,27 +346,112 @@ body {
 }
 }
 
-@media only screen and (min-device-width : 320px) and (max-device-width : 1024px)
-{
-#name {
+
+/* mobile */
+
+@media only screen and (min-device-width : 320px) and (max-device-width : 1024px) {
+	
+/* easteregg and title	 */
+	
+#you_found_the_easter_egg {
 	font-family: 'Quicksand', sans-serif;
 	font-size:900%;
-	margin-top:356px;
+	margin-top:300px;
 }
 
-#loader {
-	margin-left:auto;
-	margin-right:auto;
-	margin-top:400px;
-	border: 14px solid #0d0d0d;
-  border-radius: 50%;
-  border-top: 14px solid #ffffff;
-  width: 100px;
-  height: 100px;
-  -webkit-animation: spin 2s linear infinite;
-  animation: spin 2s linear infinite;
+#easteregg {
+	height:50px;
+	width:50px;
+	color:#fff;
+	float:left;
+	margin-top:200px;
+	margin-left:528px;
+	font-size:250%;
+}
+/* logo */
+	
+#instalogo {
+	width:80px;
+	height:auto;
 }
 
+#ytlogo {
+	width:auto;
+	height:80px;
+}
 
+#steamlogo {
+	width:auto;
+	height:96px;
+}
 
+ul {
+    list-style-type: none;
+	margin-top:300px;
+	margin-bottom:550px;
+}
+li {
+    display: inline;
+	padding:60px;
+}
 
+/* footer */
+
+.footer {
+	font-size:24px;
+	padding-top:200px;
+}
+
+/* scroll efect */
+script {
+	display: none;
+}
+#projects  {
+	display: none;
+}
+
+#arrow {
+	display: none;
+}
+#sites {
+	display:none;
+}
+#wgma {
+    display:none;	
+}
+#itext {
+    display:none;	
+}
+
+/* mobile  */
+
+#sitesmobile {
+	
+}
+.imgmobile {
+	text-align:center;
+	margin-top:100px;
+	 margin-left: auto;
+    margin-right: auto;
+	width:700px;
+	height:auto;
+	-webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+    filter: grayscale(100%);
+	border-style:solid;
+	border-width:1px;
+}
+
+#itextmobile {
+	font-family: 'Montserrat', sans-serif;
+	font-size:35px;
+	color:black;
+	text-decoration:none;
+}
+
+a {
+	text-decoration:none;
+}
+#sitesmobile {
+	display:inline;
+}
+}
