--- a/index.css
+++ b/index.css
@@ -196,7 +196,7 @@ ul a {
 
 #left {
 	float:left;
-	width:400px;
+	width:20px;
 	
 }
 
@@ -239,18 +239,7 @@ ul a {
     box-shadow: 10px 15px 15px #d9d9d9;	
 }
 
-.itext {
-	width:200px;
-	float:left;
-	margin-top:20px;
-	margin-left:-50px;
-	font-family: 'Montserrat', sans-serif;
-	color:black;
-	text-decoration:none;
-	
-}
-
-#gifs {
+#itext {
 	width:200px;
 	float:left;
 	margin-top:20px;
@@ -261,33 +250,11 @@ ul a {
 	
 }
 
-#wout {
-	width:200px;
-	float:left;
-	margin-top:20px;
-	margin-left:-52px;
-	font-family: 'Montserrat', sans-serif;
-	color:black;
-	text-decoration:none;
-	
-}
-
-#klj {
-	width:200px;
-	float:left;
-	margin-top:20px;
-	margin-left:-60px;
-	font-family: 'Montserrat', sans-serif;
-	color:black;
-	text-decoration:none;
-	
-}
-
 #wgma {
 	width:200px;
 	float:left;
 	margin-top:20px;
-	margin-left:-10px;
+	margin-left:-15px;
 	font-family: 'Montserrat', sans-serif;
 	color:black;
 	text-decoration:none;
