--- a/index.css
+++ b/index.css
@@ -423,14 +423,11 @@ script {
 /* mobile  */
 
 #sitesmobile {
-	
-
 }
 .imgmobile {
 	text-align:center;
-	margin-top:00px;
-	 margin-left: auto;
-    margin-right: auto;
+	margin-top:100px;
+	margin-right:20px;
 	width:700px;
 	height:auto;
 	-webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
@@ -450,6 +447,6 @@ a {
 	text-decoration:none;
 }
 #sitesmobile {
-	display:inline;
+	display:block;
 }
 }
