--- a/integrated sites/wgma/index.css
+++ b/integrated sites/wgma/index.css
@@ -93,6 +93,9 @@ body {
                       font-size:200%;
 					  margin-left:60px;
 					  }
+					  #gif {
+					  margin-left:60px;
+					  }
 					  #textdiv {
 						  width:680px;
 					  }
