--- a/2sites/twee/index.css
+++ b/2sites/twee/index.css
@@ -107,7 +107,7 @@ ul a {
 }
 
 #klj {
-	margin-top:400px;
+	
 }
 
 .sites {
@@ -174,6 +174,18 @@ ul a {
     animation: fadein 0.5s, fadeout 0.5s 2.5s;
 }
 
+#ai1 {
+	margin-top:400px;
+	font-size:25px;
+	font-family: 'Montserrat', sans-serif;
+}
+
+#ai2 {
+	margin-top:100px;
+	font-size:25px;
+	font-family: 'Montserrat', sans-serif;
+}
+
 @-webkit-keyframes fadein {
     from {bottom: 0; opacity: 0;} 
     to {bottom: 30px; opacity: 1;}
@@ -235,10 +247,25 @@ ul a {
 /* mobile */
 
 @media only screen and (min-device-width : 320px) and (max-device-width : 1024px) {
-	#klj {
+	#ai1 {
 	margin-top:1000px;
+	font-size:35px;
 }
+
+	#ai2 {
+	font-size:35px;
+}
+
 #page {
 margin-top:600px;
+}
+.footer {
+  font-size:20px;
+}
+#wout {
+	  font-size:20px;
+}
+.sitetext {
+	font-size:30px;
 }
 }
