--- a/Style.css
+++ b/Style.css
@@ -2,3 +2,31 @@
   text-decoration: underline;
   color: #0000EE;
 }
+
+#DescriptionHead {
+  text-decoration: underline;
+  color: #0000EE;
+}
+
+/* mobile */
+@media only screen
+and (min-device-width : 320px)
+and (max-device-width : 1024px)
+{
+.Fakelink {
+    text-decoration: underline;
+    color: #0000EE;
+  }
+.Description {
+display: none;
+}
+#DescriptionHead {
+  display: none;
+}
+.Title {
+  font-size: 20px;
+}
+address {
+  font-size: 12px;
+}
+}
