--- a/style.css
+++ b/style.css
@@ -26,6 +26,10 @@ color:black;
   cursor: pointer;
   font-size: 40px;
   margin: 5px 0 0 0;
+  -webkit-user-select: none;
+-moz-user-select: none;
+-ms-user-select: none;
+user-select: none;
 }
 
 #header_border {
